<resources>
    <string name="app_name">MyProject</string>
    <string name="text_Spots">Spots</string>
    <string name="text_Taipei101">Taipei 101</string>
    <string name="msg_LocationNameNotFound">Location Name Not Found</string>
    <string name="text_NotGranted">Not Granted</string>
    <string name="text_Direct">Navigation</string>
    <string name="msg_LocationNotAvailable">Location not available</string>
    <string name="text_CGLOHAS">CGLOHAS</string>
    <string name="text_News">News</string>
    <string name="text_Map">Map</string>
    <string name="text_Settings">Settings</string>
    <string name="text_UserName"></string>
    <string name="text_Email">picapica@gmail.com</string>
    <string name="text_Open">Open</string>
    <string name="text_Close">Close</string>
    <string name="msg_NoSpotsFound">NoSpotsFound</string>
    <string name="msg_NoNetwork">NoNetwork</string>
    <string name="text_Shops">Store</string>
    <string name="msg_NoShopsFound">NoShopsFound</string>
    <string name="text_Items">Ingredients</string>
    <string name="msg_NoItemsFound">NoItemsFound</string>
    <string name="msg_InvalidUserOrPassword">InvalidUserOrPassword</string>
    <string name="msg_EmptyUserOrPassword">Please Enter your UserName / Password</string>
    <string name="hint_etUser">Please enter username</string>
    <string name="hint_etPassword">Please enter password</string>
    <string name="text_Login">Login</string>
    <string name="text_Logout">Logout</string>
    <string name="wellcome">Wellcome To CGLOHAS</string>
    <string name="msg_WrongUserOrPassword">Wrong UserName / Password</string>
    <string name="reload">reload</string>
    <string name="verify">Submit</string>
    <string name="instruction">Enter the words above</string>
    <string name="show_error">Failed to show CAPTCHA</string>
    <string name="verification_success">Your answer is verified successfully</string>
    <string name="verification_failed">You did not enter the CAPTCHA phrase correctly</string>

    <string name="EnterAc">Pleas Enter your Account</string>

    <string name="EnterPw">Please Enter your Password</string>
    <string name="Account">Account:</string>
    <string name="Pw">Password:</string>
    <string name="Sex">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="Name">Name:</string>
    <string name="EnterName">Please Enter your Name</string>
    <string name="Ph">Phone:</string>
    <string name="EnterPh">Please Enter your Phone No.</string>
    <string name="Em">Email:</string>
    <string name="EnterEm">Please Enter your Email</string>
    <string name="BD">BirthDate:</string>
    <string name="EnterBD">yyyy-mm-dd</string>
    <string name="Pic">Photo</string>
    <string name="select">Select Image </string>
    <string name="take_pic">Take photo  </string>
    <string name="checkData">Please confirm that all fields are complete</string>
    <string name="msg_NoCameraApp">No camera app found</string>
    <string name="registSucess">register successfully!</string>
    <string name="errorHappened">An error occurred. Please try again later</string>
    <string name="MemberCenter">MemberCenter</string>
    <string name="RegisterNow">RegisterNow</string>

    <string name="totalPrice">Subtotal: 0 NTD</string>
    <string name="productInfo"><u>Product desciption</u></string>
    <string name="confirm">Please confirm below detail</string>
    <string name="text_Recipes">Recipes</string>
    <string name="text_MainStores">Store</string>
    <string name="text_Storename">Store Name</string>
    <string name="text_Shortdesc">Introduction</string>
    <string name="msg_NoMainStoreFound">Store not found</string>
    <string name="text_stores">Store Name</string>
</resources>
