<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="._01_Register.New_Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/Account"
                style="@style/RegisterLabel"/>
            <TextView
                android:id="@+id/errorAccount"
                android:textColor="@android:color/holo_red_light"
                style="@style/error"/>
            <ImageView
                android:id="@+id/OKAc"
                style="@style/OK"
                />
        </LinearLayout>
            <EditText
                android:id="@+id/Account"
                style="@style/Register"
                android:hint="@string/EnterAc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/RegisterLabel"
                android:text="@string/Pw"
                />
            <TextView
                android:id="@+id/errorPassword"
                android:textColor="@android:color/holo_red_light"
                style="@style/error"/>
            <ImageView
                android:id="@+id/OKPw"
                style="@style/OK"
                />
        </LinearLayout>
            <EditText
                android:id="@+id/Password"
                android:inputType="textPassword"
                style="@style/Register"
                android:hint="@string/EnterPw" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/Sex"
                style="@style/RegisterLabel"/>
            <TextView
                android:id="@+id/errorGender"
                android:textColor="@android:color/holo_red_light"
                style="@style/error"/>
            <ImageView
                android:id="@+id/OKGender"
                style="@style/OK"
                />
        </LinearLayout>
            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:id="@+id/Gender">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textSize="16dp"
                    android:id="@+id/MaleButton" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textSize="16dp"
                    android:id="@+id/FemaleButton" />
            </RadioGroup>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/Name"
                style="@style/RegisterLabel"/>
            <TextView
                android:id="@+id/errorName"
                android:textColor="@android:color/holo_red_light"
                style="@style/error"/>
            <ImageView
                android:id="@+id/OKName"
                style="@style/OK"
                />
        </LinearLayout>
            <EditText
                android:id="@+id/Name"
                style="@style/Register"
                android:hint="@string/EnterName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/Ph"
                style="@style/RegisterLabel"/>
            <TextView
                android:id="@+id/errorPhone"
                android:textColor="@android:color/holo_red_light"
                style="@style/error"/>
            <ImageView
                android:id="@+id/OKPhone"
                style="@style/OK"
                />
        </LinearLayout>
            <EditText
                android:id="@+id/Phone"
                android:inputType="phone"
                style="@style/Register"
                android:hint="@string/EnterPh" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/Em"
                style="@style/RegisterLabel"/>
            <TextView
                android:id="@+id/errorEmail"
                android:textColor="@android:color/holo_red_light"
                style="@style/error"/>
            <ImageView
                android:id="@+id/OKEmail"
                style="@style/OK"
                />
        </LinearLayout>
            <EditText
                android:id="@+id/Email"
                style="@style/Register"
                android:hint="@string/EnterEm" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/BD"
                style="@style/RegisterLabel"/>
            <TextView
                android:id="@+id/errorBirthDate"
                android:textColor="@android:color/holo_red_light"
                style="@style/error"/>
            <ImageView
                android:id="@+id/OKBirthDate"
                style="@style/OK"
                />
        </LinearLayout>
            <EditText
                android:id="@+id/BirthDate"
                android:inputType="datetime"
                style="@style/Register"
                android:hint="@string/EnterBD" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/Pic"
                style="@style/RegisterLabel"/>
            <TextView
                android:id="@+id/errorPhoto"
                android:textColor="@android:color/holo_red_light"
                style="@style/error"/>
            <ImageView
                android:id="@+id/OKPicture"
                style="@style/OK"
                />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select"
                android:id="@+id/Select"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/take_pic"
                android:id="@+id/TakePhoto"/>
    </LinearLayout>


        <ImageView
            android:id="@+id/Picture"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:src="@drawable/defaultuser" />


        <FrameLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.lib.recaptcha.ReCaptcha
                android:id="@+id/recaptcha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="match_parent"
                android:layout_height="42dp" />
        </FrameLayout>

        <EditText
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/instruction" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/verify"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/verify" />

            <Button
                android:id="@+id/reload"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reload" />
        </LinearLayout>
        <TextView
            android:id="@+id/errorVerify"
            android:textColor="@android:color/holo_red_light"
            style="@style/error"/>
    </LinearLayout>
</ScrollView>